--- a/gradle.properties
+++ b/gradle.properties
@@ -28,4 +28,7 @@ kotlin.stdlib.default.dependency = false
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
 org.gradle.unsafe.configuration-cache = true
 
+# Versions
 ktorVersion = 2.2.1
+jupiterVersion = 5.9.1
+coroutineTestVersion = 1.6.4
