Add embedded web browser

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,6 @@
 pluginGroup = com.github.merlinths.codegolf
 pluginName = Code-Golf
 pluginRepositoryUrl = https://github.com/MerlinTHS/Code-Golf
-# SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
@@ -31,4 +30,5 @@ org.gradle.unsafe.configuration-cache = true
 # Versions
 ktorVersion = 2.2.1
 jupiterVersion = 5.9.1
+mockKVersion = 1.13.3
 coroutineTestVersion = 1.6.4
