--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -1,13 +1,5 @@
 title = Code Golf
 
-playground = Playground
-website = Website
-
-settings = Settings
-rename_variables = Rename variables
-minify = Minify code
-
-preview = Preview
-submit = Submit
-
 hole = Hole
+
+online = Online
