Add ktor dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,7 @@ kotlin.stdlib.default.dependency = false
 org.gradle.unsafe.configuration-cache = true
 
 # Versions
+ktorVersion = 2.2.1
 jupiterVersion = 5.9.1
 mockKVersion = 1.13.3
 coroutineTestVersion = 1.6.4
